# py-nerves-hub-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
nerves_hub_client/: __init__.py  client.py  exceptions.py
nerves_hub_client/resources/: __init__.py  nerveshub_ca_certs.pem
tests/: test_nerves_hub_client.py  test_py_nerves_hub_client.py
tests/resources/: cert.pem  key_decrypted.pem
