[tool.poetry]
name = "nerves_hub_client"
version = "0.3.0"
description = ""
authors = ["Jon Thacker <jon@sparkmeter.io>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
cryptography = "^36.0.1"
pyOpenSSL = "^22.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-mypy = "^0.9.0"
responses = "^0.18.0"
types-requests = "^2.27.11"
black = "^22.1.0"
ipython = "^7.32"
pre-commit = "^2.17.0"
pylint = "^2.12.2"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
pydocstyle = "^6.1.1"

[tool.pylint.'BASIC']
good-names = ["f"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
